--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ https://github.com/ardacarofficial/links-website is open source project.
         <img src="img/logo.png" alt="Logo" />
       </div>
       <div class="header_text flex_column_center">
-        <h1 class="header_h_item">Your Title</h1>
-        <h2 class="header_h_item">Your Description</h2>
+        <h1 class="header_h_item">Zhengji Li (李正佶)</h1>
+        <h2 class="header_h_item">Del Norte 2028</h2>
       </div>
     <!-- Logo, Title and Description Codes End -->  
 
@@ -33,7 +33,7 @@ https://github.com/ardacarofficial/links-website is open source project.
       <div class="header_svg_list flex_row_center">
         <!-- Icon 1 Codes -->
         <div class="header_svg_item">
-          <a href="#link" target="_blank" rel="nofollow">
+          <a href="https://open.spotify.com/user/dm51h9v7sqgc1gnwe2xht2ugq?si=6d48dbe8d8334e12" target="_blank" rel="nofollow">
             <svg enable-background="new 0 0 24 24" viewBox="0 0 24 24" >
               <path d="M18,10.561a.494.494,0,0,1-.245-.065,15.2,15.2,0,0,0-10.95-1.55.5.5,0,0,1-.232-.973A16.2,16.2,0,0,1,18.25,9.626a.5.5,0,0,1-.247.935Z"></path><path d="M16.646,13.632a.5.5,0,0,1-.249-.066,12.459,12.459,0,0,0-9.121-1.292.5.5,0,1,1-.237-.971A13.458,13.458,0,0,1,16.9,12.7a.5.5,0,0,1-.25.933Z"></path><path d="M15.312,16.583a.5.5,0,0,1-.251-.068,9.777,9.777,0,0,0-7.295-1.033.5.5,0,0,1-.245-.97,10.768,10.768,0,0,1,8.043,1.139.5.5,0,0,1-.252.932Z"></path><path d="M12,23A11,11,0,1,1,23,12,11.013,11.013,0,0,1,12,23ZM12,2A10,10,0,1,0,22,12,10.011,10.011,0,0,0,12,2Z"></path>
             </svg>
@@ -41,7 +41,7 @@ https://github.com/ardacarofficial/links-website is open source project.
         </div>
         <!-- Icon 2 Codes -->
         <div class="header_svg_item">
-          <a href="#link" target="_blank" rel="nofollow">
+          <a href="https://x.com/nishiaax2" target="_blank" rel="nofollow">
             <svg enable-background="new 0 0 24 24" viewBox="0 0 24 24">
               <path d="m2.538 3 7.425 9.928L2 21h1.5l7.033-7.067L16 21h5.232l-7.662-9.995 6.955-7.514h-1.5L13 10 7.77 3H2.538Zm1.994 1h2.645l12.087 16h-2.525L4.532 4Z"></path>
             </svg>
@@ -49,7 +49,7 @@ https://github.com/ardacarofficial/links-website is open source project.
         </div>
         <!-- Icon 3 Codes -->
         <div class="header_svg_item">
-          <a href="#link" target="_blank" rel="nofollow">
+          <a href="https://www.instagram.com/noishiaa/" target="_blank" rel="nofollow">
             <svg enable-background="new 0 0 24 24" viewBox="0 0 24 24">
               <path d="M21.938,7.71a7.329,7.329,0,0,0-.456-2.394,4.615,4.615,0,0,0-1.1-1.694,4.61,4.61,0,0,0-1.7-1.1,7.318,7.318,0,0,0-2.393-.456C15.185,2.012,14.817,2,12,2s-3.185.012-4.29.062a7.329,7.329,0,0,0-2.394.456,4.615,4.615,0,0,0-1.694,1.1,4.61,4.61,0,0,0-1.1,1.7A7.318,7.318,0,0,0,2.062,7.71C2.012,8.814,2,9.182,2,12s.012,3.186.062,4.29a7.329,7.329,0,0,0,.456,2.394,4.615,4.615,0,0,0,1.1,1.694,4.61,4.61,0,0,0,1.7,1.1,7.318,7.318,0,0,0,2.393.456c1.1.05,1.472.062,4.29.062s3.186-.012,4.29-.062a7.329,7.329,0,0,0,2.394-.456,4.9,4.9,0,0,0,2.8-2.8,7.318,7.318,0,0,0,.456-2.393c.05-1.1.062-1.472.062-4.29S21.988,8.814,21.938,7.71Zm-1,8.534a6.351,6.351,0,0,1-.388,2.077,3.9,3.9,0,0,1-2.228,2.229,6.363,6.363,0,0,1-2.078.388C15.159,20.988,14.8,21,12,21s-3.159-.012-4.244-.062a6.351,6.351,0,0,1-2.077-.388,3.627,3.627,0,0,1-1.35-.879,3.631,3.631,0,0,1-.879-1.349,6.363,6.363,0,0,1-.388-2.078C3.012,15.159,3,14.8,3,12s.012-3.159.062-4.244A6.351,6.351,0,0,1,3.45,5.679a3.627,3.627,0,0,1,.879-1.35A3.631,3.631,0,0,1,5.678,3.45a6.363,6.363,0,0,1,2.078-.388C8.842,3.012,9.205,3,12,3s3.158.012,4.244.062a6.351,6.351,0,0,1,2.077.388,3.627,3.627,0,0,1,1.35.879,3.631,3.631,0,0,1,.879,1.349,6.363,6.363,0,0,1,.388,2.078C20.988,8.841,21,9.2,21,12S20.988,15.159,20.938,16.244Z"></path>
               <path d="M17.581,5.467a.953.953,0,1,0,.952.952A.954.954,0,0,0,17.581,5.467Z"></path>
@@ -58,6 +58,7 @@ https://github.com/ardacarofficial/links-website is open source project.
           </a>
         </div>
         <!-- Icon 4 Codes -->
+         
         <div class="header_svg_item">
           <a href="#link" target="_blank" rel="nofollow">
             <svg enable-background="new 0 0 24 24" viewBox="0 0 24 24">
@@ -68,9 +69,12 @@ https://github.com/ardacarofficial/links-website is open source project.
           </a>
         </div>
       </div>
+
+    
     <!-- Social Media Icons Codes End -->
 
     <!-- Menu Codes Start -->
+     <!--
       <nav>
         <ul class="header_nav_menu_list flex_no_wrap_row_center">
           <li data-target="#main_section_container_1" id="header_nav_menu_item_1" class="header_nav_menu_item" href="">Menu 1</li>
@@ -78,6 +82,7 @@ https://github.com/ardacarofficial/links-website is open source project.
           <li data-target="#main_section_container_3" id="header_nav_menu_item_3" class="header_nav_menu_item" href="">Menu 3</li>
         </ul>
       </nav>
+    -->
     <!-- Menu Codes End -->
 
     </header>
@@ -86,12 +91,12 @@ https://github.com/ardacarofficial/links-website is open source project.
       <section id="main_section_container_1" class="flex_column_center">
         <!-- Menu Text Item -->
         <div class="main_text_item">
-          <p>The project, where you can easily change texts, icons, colours, boxes and images, is live! Download and try it on Github now.</p>
+          <p>Hey there! My name is Zhengji and I'm a web developer at Del Norte. Ask me anything!</p>
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
           <a class="main_small_a_item" href="https://github.com/ardacarofficial/links-website/wiki/Component-Settings" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">Component Settings</button>
+            <button class="main_small_button_item">Quizbowl</button>
           </a>
           <a class="main_small_a_item" href="https://github.com/ardacarofficial/links-website/wiki/Design-Settings" target="_blank" rel="nofollow">
             <button class="main_small_button_item">Design Settings</button>
@@ -190,7 +195,7 @@ https://github.com/ardacarofficial/links-website is open source project.
     <footer>
       <!-- Footer Codes Start -->
       <div class="footer_div_item flex_row_center">
-        <a class="footer_a_item" href="#link">Your Name</a>&nbsp;| Copyright Text
+        <a class="footer_a_item" href="#link">Zhengji Li (李正佶)</a>&nbsp;| nishiaaaa on discord
       </div>
     </footer>
       <!-- Footer Codes End -->
