final changes for tn

--- a/index.html
+++ b/index.html
@@ -95,29 +95,29 @@ https://github.com/ardacarofficial/links-website is open source project.
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
-          <a class="main_small_a_item" href="https://github.com/ardacarofficial/links-website/wiki/Component-Settings" target="_blank" rel="nofollow">
+          <a class="main_small_a_item" href="base_url/navigation/quizbowl.html" target="_blank" rel="nofollow">
             <button class="main_small_button_item">Quizbowl</button>
           </a>
-          <a class="main_small_a_item" href="https://github.com/ardacarofficial/links-website/wiki/Design-Settings" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">Design Settings</button>
+          <a class="main_small_a_item" href="" target="_blank" rel="nofollow">
+            <button class="main_small_button_item">About</button>
           </a>
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
-          <a class="main_small_a_item" href="https://github.com/ardacarofficial/links-website/discussions" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">Report a Bug or Suggestion</button>
+          <a class="main_small_a_item" href="=" target="_blank" rel="nofollow">
+            <button class="main_small_button_item">genshin...</button>
           </a>
-          <a class="main_small_a_item" href="https://github.com/ardacarofficial/links-website/pulls" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">Support the Project</button>
+          <a class="main_small_a_item" href="=" target="_blank" rel="nofollow">
+            <button class="main_small_button_item">My evergrowing val addiction :D</button>
           </a>
         </div>
         <!-- Menu Item -->
-        <a class="main_a_item" href="https://github.com/ardacarofficial/links-website" target="_blank" rel="nofollow">
-          <button class="main_button_item">Github Open Source Files</button>
+        <a class="main_a_item" href="https://github.com/xinjiav2" target="_blank" rel="nofollow">
+          <button class="main_button_item">Github</button>
         </a>
         <!-- Menu Item -->
         <a class="main_a_item" href="https://github.com/ardacarofficial" target="_blank" rel="nofollow">
-          <button class="main_button_item">Project Creator</button>
+          <button class="main_button_item">Project Creator (Where I got this template from)</button>
         </a>
       </section>
       <!-- Menu Container 1 Codes End -->
