--- a/index.html
+++ b/index.html
@@ -95,19 +95,19 @@ https://github.com/ardacarofficial/links-website is open source project.
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
-          <a class="main_small_a_item" href="base_url/navigation/quizbowl.html" target="_blank" rel="nofollow">
+          <a class="main_small_a_item" href="base_url/quizbowl.html" target="_blank" rel="nofollow">
             <button class="main_small_button_item">Quizbowl</button>
           </a>
-          <a class="main_small_a_item" href="" target="_blank" rel="nofollow">
+          <a class="main_small_a_item" href="base_url/about.html" target="_blank" rel="nofollow">
             <button class="main_small_button_item">About</button>
           </a>
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
-          <a class="main_small_a_item" href="=" target="_blank" rel="nofollow">
+          <a class="main_small_a_item" href="base_url/genshin.html" target="_blank" rel="nofollow">
             <button class="main_small_button_item">genshin...</button>
           </a>
-          <a class="main_small_a_item" href="=" target="_blank" rel="nofollow">
+          <a class="main_small_a_item" href="base_url/val.html" target="_blank" rel="nofollow">
             <button class="main_small_button_item">My evergrowing val addiction :D</button>
           </a>
         </div>
