--- a/navigation/genshin.html
+++ b/navigation/genshin.html
@@ -18,10 +18,7 @@
       <section>
         <h2>Section Title</h2>
         <p>
-          Quizbowl is a competitive quiz game where players answer questions from various categories. 
-          Players can compete individually or in teams, and the game is often played in a fast-paced format. 
-          You may as well say I'm addicted xD 
-          However you should do aleague, and qb (JOIN DNQB!!!!!)
+          This is a template page. Replace this content with your own.
         </p>
       </section>
     </main>
