--- a/navigation/quizbowl.html
+++ b/navigation/quizbowl.html
@@ -18,10 +18,10 @@
       <section>
         <h2>Section Title</h2>
         <p>
-          Quizbowl is a competitive quiz game where players answer questions from various categories. 
-          Players can compete individually or in teams, and the game is often played in a fast-paced format. 
-          You may as well say I'm addicted xD 
-          However you should do aleague, and qb (JOIN DNQB!!!!!)
+          Quizbowl is a competitive quiz game where players answer questions from various categories. <br>
+          Players can compete individually or in teams, and the game is often played in a fast-paced format. <br>
+          You may as well say I'm addicted xD <br>
+          However you should do aleague, and qb (JOIN DNQB!!!!!)<br>
         </p>
       </section>
     </main>
